--- a/style.css
+++ b/style.css
@@ -1,11 +1,30 @@
+/*
+  ========================================
+  Buttons
+  ========================================
+*/
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+/*
+  ========================================
+  Body
+  ========================================
+*/
+
 body {
     font-family: 'Montserrat', sans-serif;
 }
+
+/*
+  ========================================
+  Header
+  ========================================
+*/
 
 header {
     display: flex;
@@ -15,9 +34,11 @@ header {
     align-items: center;
 }
 
-button {
-    font-family: 'Montserrat', sans-serif;
-}
+/*
+  ========================================
+  Logo Container
+  ========================================
+*/
 
 .logo-container {
     display: flex;
@@ -35,6 +56,12 @@ button {
     font-weight: 600;
     font-size: 25px;
 }
+
+/*
+  ========================================
+  Navigation
+  ========================================
+*/
 
 nav {
     width: 50%;
@@ -71,6 +98,12 @@ nav {
     color: #ffffff;
 }
 
+/*
+  ========================================
+  Home Page
+  ========================================
+*/
+
 .introduction {
     background-image: url(img/piano-main.jpg);
     background-size: cover;
@@ -105,19 +138,11 @@ nav {
     -webkit-text-stroke: 1px black; /* width and color */
 }
 
-.home-book-btn {
-    
-    padding: 20px 20px;
-    font-weight: 600;
-    font-size: 24px;
-    border-radius: 10px;
-    background:  #990099;
-    color: #ffffff;
-}
-
-.home-book-btn:hover {
-    background: #660066;
-}
+/*
+  ========================================
+  About Page
+  ========================================
+*/
 
 #about {
     width: 95%;
@@ -148,6 +173,29 @@ nav {
     padding: 15px 25px;
 }
 
+/*
+  ========================================
+  Buttons
+  ========================================
+*/
+
+button {
+    font-family: 'Montserrat', sans-serif;
+}
+
+.home-book-btn {
+    padding: 20px 20px;
+    font-weight: 600;
+    font-size: 24px;
+    border-radius: 10px;
+    background:  #990099;
+    color: #ffffff;
+}
+
+.home-book-btn:hover {
+    background: #660066;
+}
+
 .learn-more-btn {
     padding: 15px 20px;
     border-radius: 10px;
@@ -162,4 +210,47 @@ nav {
     background: #990099;
     color: #ffffff;
     cursor: pointer;
+}
+
+/*
+  ========================================
+  Services Page
+  ========================================
+*/
+
+#services {
+    background: #f0fafa;
+    height: 90vh;
+    text-align: center;
+}
+
+#services h1{
+    padding: 30px;
+    font-weight: 700;
+    font-size: 35px;
+}
+
+.services-container{
+    width: 95%;
+    margin: 10px auto;
+    display: flex;
+   
+    
+}
+
+.service {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 10px;
+    width: 31.7%;
+}
+
+.service h2 {
+    padding: 15px;
+}
+
+.service img{
+    height: 35vh;
+    padding-bottom: 10px;
 }
