--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 */
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 /*
@@ -171,6 +171,7 @@ nav {
 .piano-teacher-img {
     height: 70vh;
     padding: 15px 25px;
+    
 }
 
 /*
@@ -219,8 +220,8 @@ button {
 */
 
 #services {
-    background: #f0fafa;
-    height: 90vh;
+    background: #f5ffff;
+    height: 120vh;
     text-align: center;
 }
 
@@ -234,8 +235,6 @@ button {
     width: 95%;
     margin: 10px auto;
     display: flex;
-   
-    
 }
 
 .service {
@@ -253,4 +252,148 @@ button {
 .service img{
     height: 35vh;
     padding-bottom: 10px;
+    border-radius: 10px;
 }
+
+.service p {
+    width: 90%;
+}
+
+/*
+  ========================================
+  Contact Page
+  ========================================
+*/
+
+#contact{
+    height: 100vh;
+    padding-top: 25px;
+    background: #112d42;
+}
+
+/*
+  ========================================
+  Contact Form Container
+  ========================================
+*/
+
+.contact-container {
+    width: 60%;
+    margin: 20px auto;
+    padding: 20px 20px;
+    background: #fff;
+    border-radius: 10px;
+}
+
+.contact-container h2{
+    text-align: center;
+}
+
+/*
+  ========================================
+  Form 
+  ========================================
+*/
+
+.formBox {
+    padding: 20px 20px;
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.inputBox {
+    position: relative;
+    width: 47%;
+    padding-top: 20px;
+    margin: 10px 10px;
+}
+
+.inputBox input {
+    width: 100% !important;
+    border: none;
+    border-bottom: 1px solid #777;
+    outline: none;
+    font-size: 18px;
+}
+
+.inputBox.text span{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: 0.3s;
+    pointer-events: none;
+   
+}
+
+.message-area {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.inputBox.textarea{
+    width: 60%;
+    position: relative;
+}
+
+.inputBox.textarea textarea{
+    width: 100%;
+    min-height: 120px;
+    resize: none;
+
+    border: none;
+    border-bottom: 1px solid #777;
+    outline: none;
+    font-size: 18px;
+}
+
+.inputBox.textarea span {
+    position: absolute;
+    top: 20px;
+    left: 0;
+    transition: 0.3s;
+    pointer-events: none;
+}
+
+.inputBox input:focus ~ span,
+.inputBox input:hover ~ span,
+.inputBox input:valid ~ span{
+    transform: translateY(-22px);
+    color: #e699ff;
+    font-weight: 300;
+    font-size: 14px;
+}
+
+.inputBox textarea:focus ~ span,
+.inputBox textarea:hover ~ span,
+.inputBox textarea:valid ~ span{
+    transform: translateY(-22px);
+    color: #e699ff;
+    font-weight: 300;
+    font-size: 14px;
+}
+
+.send-btn {
+    margin: 0 10px;
+}
+
+.send-btn input{
+    width: 120px;
+    height: 50px;
+    font-weight: 500;
+    font-size: 18px;
+    border-radius: 5px;
+    border: solid;
+    background: #990099;
+    color: #fff;
+}
+
+.send-btn input:hover{
+    cursor: pointer;
+    
+}
+
+
+
