--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ nav {
     text-decoration: none;
     font-weight: 600;
     font-size: 18px;
-    color: #990099;
+    color: #EC9F19;
 }
 
 .nav-link:hover{
@@ -89,12 +89,12 @@ nav {
     padding: 10px 10px;
     border-radius: 10px;
     border-style: solid;
-    border-color: #990099;
-    color: #990099;
+    border-color: #EC9F19;
+    color: #EC9F19;
 }
 
 .book:hover {
-    background:  #660066;
+    background:  #EC9F19;
     color: #ffffff;
 }
 
@@ -124,11 +124,14 @@ nav {
 .intro-text h1{
     font-weight: 700;
     font-size: 70px;
+    color: #EC9F19;
+    /*
     color: #800080;
 
     background: linear-gradient(to right, #cc00cc, #990099);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    */
 }
 
 .intro-text h2{
@@ -189,12 +192,12 @@ button {
     font-weight: 600;
     font-size: 24px;
     border-radius: 10px;
-    background:  #990099;
+    background:  #EC9F19;
     color: #ffffff;
 }
 
 .home-book-btn:hover {
-    background: #660066;
+    background: #e1b382;
 }
 
 .learn-more-btn {
@@ -202,13 +205,14 @@ button {
     border-radius: 10px;
     font-weight: 600;
     font-size: 20px;
-    color: #990099;
+    color: #EC9F19;
+    background-color: #ffffff;
     border: solid;
-    border-color: #990099;
+    border-color: #EC9F19;
 }
 
 .learn-more-btn:hover {
-    background: #990099;
+    background: #EC9F19;
     color: #ffffff;
     cursor: pointer;
 }
@@ -268,7 +272,7 @@ button {
 #contact{
     height: 100vh;
     padding-top: 25px;
-    background: #112d42;
+    background: #9C4D04;
 }
 
 /*
@@ -386,7 +390,7 @@ button {
     font-size: 18px;
     border-radius: 5px;
     border: solid;
-    background: #990099;
+    background: #EC9F19;
     color: #fff;
 }
 
