--- a/style.css
+++ b/style.css
@@ -75,8 +75,8 @@ nav {
 
 .nav-link {
     text-decoration: none;
-    font-weight: 600;
-    font-size: 18px;
+    font-weight: 500;
+    font-size: 15px;
     color: #EC9F19;
 }
 
@@ -197,7 +197,7 @@ button {
 }
 
 .home-book-btn:hover {
-    background: #e1b382;
+    background: #d47704;
 }
 
 .learn-more-btn {
@@ -262,6 +262,67 @@ button {
 
 .service p {
     width: 90%;
+}
+
+/*
+  ========================================
+  Testimonials Page
+  ========================================
+*/
+
+#testimonials h1 {
+    text-align: center;
+    margin: 20px auto;
+    font-size: 35px;
+    font-weight: 600;
+}
+
+.swiper-container {
+    width: 90%;
+    height: 70vh;
+    padding: 10px;
+    
+}
+
+.swiper-slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.image {
+    margin-bottom: 40px;
+}
+
+.swiper-slide img{
+    width: 75px;
+    border-radius: 50%;
+    transform: scale(2);
+}
+
+.swiper-slide h4{
+    color: #EC9F19;
+}
+
+.img2 img{
+    height: 65px;
+    border-radius: 50%;
+    transform: scale(2);
+
+}
+
+.img3 img{
+    height: 65px;
+    border-radius: 50%;
+    transform: scale(2);
+    
+}
+
+.swiper-slide p{
+    padding: 20px;
+    width:60%;
+    text-align: center;
 }
 
 /*
